Inserção de html para os componentes.

--- a/src/app/fotos-cha-bebe/fotos-cha-bebe.component.html
+++ b/src/app/fotos-cha-bebe/fotos-cha-bebe.component.html
@@ -1,1 +1,25 @@
-<p>fotos-cha-bebe works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./fotos-cha-bebe.component.css">
+</head>
+<body>
+    <section class="fotos">
+        <img src="../../assets/imagens-cha-bebe/1.jpg" alt="">
+        <img src="../../assets/imagens-cha-bebe/2.jpg" alt="">
+        <img src="../../assets/imagens-cha-bebe/3.jpg" alt="">
+        <img src="../../assets/imagens-cha-bebe/4.jpg" alt="">
+        <img src="../../assets/imagens-cha-bebe/5.jpg" alt="">
+        <img src="../../assets/imagens-cha-bebe/6.jpg" alt="">
+        <img src="../../assets/imagens-cha-bebe/7.jpg" alt="">
+        <img src="../../assets/imagens-cha-bebe/8.jpg" alt="">
+        <img src="../../assets/imagens-cha-bebe/9.jpg" alt="">
+        <img src="../../assets/imagens-cha-bebe/10.jpg" alt="">
+        <img src="../../assets/imagens-cha-bebe/11.jpg" alt="">
+        <img src="../../assets/imagens-cha-bebe/12.jpg" alt="">
+    </section>
+</body>
+</html>
