--- a/src/app/fotos-gestacao/fotos-gestacao.component.html
+++ b/src/app/fotos-gestacao/fotos-gestacao.component.html
@@ -1,1 +1,22 @@
-<p>fotos-gestacao works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./fotos-gestacao.component.css">
+</head>
+<body>
+    <section class="fotos">
+        <img src="../../assets/imagens-gestacao/gestacao(1).jpg" alt="">
+        <img src="../../assets/imagens-gestacao/gestacao(2).jpg" alt="">
+        <img src="../../assets/imagens-gestacao/gestacao(8).jpg" alt="">
+        <img src="../../assets/imagens-gestacao/gestacao(5).jpg" alt="">
+        <img src="../../assets/imagens-gestacao/gestacao(9).jpg" alt="">
+        <img src="../../assets/imagens-gestacao/gestacao(6).jpg" alt="">
+        <img src="../../assets/imagens-gestacao/gestacao(7).jpg" alt="">
+        <img src="../../assets/imagens-gestacao/gestacao(4).jpg" alt="">
+        <img src="../../assets/imagens-gestacao/gestacao(10).jpg" alt="">
+    </section>
+</body>
+</html>
