--- a/src/app/fotos2019/fotos2019.component.html
+++ b/src/app/fotos2019/fotos2019.component.html
@@ -1,1 +1,30 @@
-<p>fotos2019 works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./fotos2019.component.css">
+</head>
+<body>
+    <section class="fotos">
+        <img src="../../assets/imagens2019/1.jpg" alt="">
+        <img src="../../assets/imagens2019/2.jpg" alt="">
+        <img src="../../assets/imagens2019/3.jpg" alt="">
+        <img src="../../assets/imagens2019/4.jpg" alt="">
+        <img src="../../assets/imagens2019/5.jpg" alt="">
+        <img src="../../assets/imagens2019/6.jpg" alt="">
+        <img src="../../assets/imagens2019/7.jpg" alt="">
+        <img src="../../assets/imagens2019/8.jpg" alt="">
+        <img src="../../assets/imagens2019/9.jpg" alt="">
+        <img src="../../assets/imagens2019/10.jpg" alt="">
+        <img src="../../assets/imagens2019/11.jpg" alt="">
+        <img src="../../assets/imagens2019/12.jpg" alt="">
+        <img src="../../assets/imagens2019/13.jpg" alt="">
+        <img src="../../assets/imagens2019/14.jpg" alt="">
+        <img src="../../assets/imagens2019/15.jpg" alt="">
+        <img src="../../assets/imagens2019/16.jpg" alt="">
+        <img src="../../assets/imagens2019/17.jpg" alt="">
+    </section>
+</body>
+</html>
