Inserção de responsividade.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -53,3 +53,77 @@ main{
     background: rgba(0, 102, 51, 0.527);
 }
 
+@media (max-width: 1075px){
+    .corpo{
+        width: 100vw;
+        height: 1300px;
+        background: linear-gradient(217deg, rgba(0, 174, 255, 0.8), rgba(80, 138, 245, 0) 70.71%),
+                linear-gradient(127deg, rgba(108, 241, 108, 0.274), rgba(202, 255, 159, 0.829) 70.71%),
+                linear-gradient(336deg, rgba(105, 90, 238, 0.8), rgba(81, 209, 248, 0) 70.71%);
+    }
+    .selecionarFotos{
+        width: 40vw;
+        height: 6vh;
+        font-size: 2em;
+        border: 2px solid rgb(0, 0, 43);
+        border-radius: 11px;
+        color: rgb(0, 0, 43);
+    }
+    .titulo{
+        font-family: 'Press Start 2P', cursive;
+        font-size: 3em;
+        text-decoration: underline;
+        color: rgb(0, 0, 43);
+        padding-top: 40px;
+    }
+}
+
+@media (max-width: 800px){
+    .corpo{
+        width: 100vw;
+        height: 1200px;
+        background: linear-gradient(217deg, rgba(0, 174, 255, 0.8), rgba(80, 138, 245, 0) 70.71%),
+                linear-gradient(127deg, rgba(108, 241, 108, 0.274), rgba(202, 255, 159, 0.829) 70.71%),
+                linear-gradient(336deg, rgba(105, 90, 238, 0.8), rgba(81, 209, 248, 0) 70.71%);
+    }
+    .selecionarFotos{
+        width: 40vw;
+        height: 6vh;
+        font-size: 2em;
+        border: 2px solid rgb(0, 0, 43);
+        border-radius: 11px;
+        color: rgb(0, 0, 43);
+    }
+    .titulo{
+        font-family: 'Press Start 2P', cursive;
+        font-size: 3em;
+        text-decoration: underline;
+        color: rgb(0, 0, 43);
+        padding-top: 40px;
+    }
+}
+
+@media (max-width: 600px){
+    .corpo{
+        width: 100vw;
+        height: 800px;
+        background: linear-gradient(217deg, rgba(0, 174, 255, 0.8), rgba(80, 138, 245, 0) 70.71%),
+                linear-gradient(127deg, rgba(108, 241, 108, 0.274), rgba(202, 255, 159, 0.829) 70.71%),
+                linear-gradient(336deg, rgba(105, 90, 238, 0.8), rgba(81, 209, 248, 0) 70.71%);
+    }
+    .selecionarFotos{
+        width: 30vw;
+        height: 3vh;
+        font-size: 1em;
+        border: 2px solid rgb(0, 0, 43);
+        border-radius: 11px;
+        color: rgb(0, 0, 43);
+    }
+    .titulo{
+        font-family: 'Press Start 2P', cursive;
+        font-size: 30px;
+        text-decoration: underline;
+        color: rgb(0, 0, 43);
+        padding-top: 40px;
+    }
+}
